2025-02-04  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* unposted: Doc/Makefile.in, Etc/Makefile.in: remove a few more
	files by 'make clean'

2025-01-30  Oliver Kiddle  <opk@zsh.org>

	* github #118: Eisuke Kawashima: Completion/Unix/Command/_git:
	git rebase non-interactive mode also supports --autosquash

	* 53338: Completion/Zsh/Command/_typeset: complete typeset -n option

	* 53337: Doc/Zsh/mod_ksh93.yo, Src/Modules/ksh93.c: allow nameref -p

	* 53336: Doc/Makefile.in, Etc/Makefile.in:
	avoid GNU make specific use of $< in a non-inference rule

	* 53335: Src/hist.c, Src/string.c, Src/Zle/compcore.c,
	Src/Zle/compctl.c, Src/Zle/compmatch.c, Src/Zle/computil.c:
	Remove unused dupstring_glen() function and make use of the
	dupstring_wlen() variant in more places to avoid a strlen()

	* 53332, 53334: Src/builtin.c, Src/prompt.c, Src/Modules/stat.c,
	Src/Zle/compresult.c, Src/Zle/zle_misc.c:
	Avoid strlen calls after sprintf

2025-01-27  Oliver Kiddle  <opk@zsh.org>

	* 53329: Src/Modules/hlgroup.c: adapt .zle.sgr for CSI sequences
	that use : instead of ;

	* github #128: GI <gi1242+zsh@gmail.com>:
	Completion/Unix/Command/_vim: Updated completion for neovim

	* github #126: Wu, Zhenyu: Completion/Base/Completer/_expand_alias,
	Src/exec.c, Src/init.c, Src/parse.c, Src/utils.c, Src/zsh.h,
	configure.ac: Fix some typos

	* github #125: Kouhei Yanagita: Completion/Unix/Command/_ruby:
	Add completion for irb --no-pager

	* unposted: Completion/Unix/Command/_openldap: fix quoting

	* 53327: Completion/Unix/Command/_git: update for git 2.47

	* 53328: Completion/Linux/Command/_cpupower,
	Completion/Linux/Command/_cryptsetup,
	Completion/Linux/Command/_ethtool,
	Completion/Linux/Command/_iptables,
	Completion/Linux/Command/_selinux, Completion/Linux/Command/_sshfs,
	Completion/Linux/Command/_valgrind, Completion/Unix/Command/_abcde,
	Completion/Unix/Command/_dig, Completion/Unix/Command/_flac,
	Completion/Unix/Command/_gnutls, Completion/Unix/Command/_jq,