@@ -1,3 +1,8 @@
+2025-02-12  Bart Schaefer  <schaefer@zsh.org>
+
+	* 53348: Doc/Zsh/builtins.yo, Src/builtin.c, Test/K01nameref.ztst:
+	Revise handling of incompatible typeset options when used with -n
+
 2025-02-04  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>
 
 	* unposted: Doc/Makefile.in, Etc/Makefile.in: remove a few more
